# agentdock

./: .editorconfig  .gitignore  AGENTS.md  Architecture-AgentDock-v1.md  CLAUDE.md  Cargo.toml  LICENSE  PRD-AgentDock-v1.md  Project-AgentDock.md  README.md  README.zh-CN.md  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
apps/desktop/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src/: App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  mcp.rs  open_targets.rs  path_env.rs  payloads.rs  provider_health.rs  provider_id.rs  skills.rs  terminal.rs  threads.rs
apps/desktop/src/components/composer/: MessageComposer.tsx
apps/desktop/src/components/header/: ThreadHeader.tsx
apps/desktop/src/components/mcp/: McpPanel.tsx
apps/desktop/src/components/messages/: MessageList.tsx
apps/desktop/src/components/provider/: ProviderIcon.tsx
apps/desktop/src/components/sidebar/: Sidebar.tsx
apps/desktop/src/components/skills/: SkillsPanel.tsx
apps/desktop/src/components/terminal/: EmbeddedTerminal.tsx  TerminalHelpPopover.tsx  TerminalToolbar.tsx  helpDocs.ts  theme.ts  types.ts  useEmbeddedTerminalController.ts  useTerminalHostEffects.ts  useTerminalSessionLifecycle.ts
apps/desktop/src/components/threads/: ThreadFolderGroup.tsx  ThreadListItem.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/desktop/src/hooks/: useMcpServers.ts  useSidebar.ts  useSkills.ts  useThreads.ts  useWindowDrag.ts
apps/desktop/src/lib/: developerActions.test.ts  developerActions.ts  message.ts  provider.ts  thread.test.ts  thread.ts
apps/mobile/: App.tsx  app.json  package.json
crates/agentdock-core/: Cargo.toml
crates/agentdock-core/migrations/: 0001_init.sql  0002_skills_enhanced.sql  0003_mcp_management.sql
crates/agentdock-core/src/: lib.rs
crates/agentdock-core/src/db/: mod.rs
crates/agentdock-core/src/mcp/: mod.rs
crates/agentdock-core/src/skills/: mod.rs
crates/provider-claude/: Cargo.toml
crates/provider-claude/src/: lib.rs
crates/provider-codex/: Cargo.toml
crates/provider-codex/src/: lib.rs
crates/provider-contract/: Cargo.toml
crates/provider-contract/src/: lib.rs
crates/provider-opencode/: Cargo.toml
crates/provider-opencode/src/: lib.rs
docs/: agentdock-current-product-summary.md  agentdock-master-worker-architecture.md  agentdock-phase1-prd.md
