[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/provider-contract",
    "crates/provider-codex",
    "crates/provider-claude",
    "crates/agentdock-core",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
