[package]
name = "agentdock-core"
version = "0.1.0"
edition = "2021"
description = "Core domain and SQLite utilities for AgentDock"

[dependencies]
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
