[package]
name = "agentdock-desktop"
version = "0.1.0"
description = "AgentDock desktop shell"
authors = ["AgentDock"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agentdock_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
agentdock-core = { path = "../../../crates/agentdock-core" }
provider-contract = { path = "../../../crates/provider-contract" }
