[package]
name = "agentdock-desktop"
version = "0.1.1"
description = "AgentDock desktop shell"
authors = ["AgentDock"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agentdock_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
agentdock-core = { path = "../../../crates/agentdock-core" }
provider-contract = { path = "../../../crates/provider-contract" }
provider-claude = { path = "../../../crates/provider-claude" }
provider-codex = { path = "../../../crates/provider-codex" }
provider-opencode = { path = "../../../crates/provider-opencode" }
portable-pty = "0.8"
serde = { workspace = true }
