[package]
name = "agentdock-desktop"
version = "1.1.0"
description = "AgentClaw desktop shell"
authors = ["AgentClaw"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agentdock_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
agentdock-core = { path = "../../../crates/agentdock-core" }
provider-contract = { path = "../../../crates/provider-contract" }
provider-claude = { path = "../../../crates/provider-claude" }
provider-codex = { path = "../../../crates/provider-codex" }
provider-opencode = { path = "../../../crates/provider-opencode" }
portable-pty = "0.8"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"
zip = "0.6"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
dirs = "5"
